--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Jake Gutierrez
+% Author : Andrew Sun
 % Based off of: https://github.com/sb2nov/resume
 % License : MIT
 %------------------------
@@ -106,10 +106,6 @@
 \begin{document}
 
 %----------HEADING----------
-% \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-%   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-%   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
-% \end{tabular*}
 
 \begin{center}
     \textbf{\large \scshape Andrew Sun} \\ \vspace{1pt}
@@ -167,13 +163,7 @@ covered a variety of topics, including arrays in C, pointers, bash, file I/O, sy
         \resumeItemListEnd
       
       
-%      \resumeProjectHeading
-%          \resumeItemListStart
-%           \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-%            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-%            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-%            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-%          \resumeItemListEnd
+
     \resumeSubHeadingListEnd
 
 
@@ -181,25 +171,24 @@ covered a variety of topics, including arrays in C, pointers, bash, file I/O, sy
 \section{Projects}
     \resumeSubHeadingListStart
         \resumeProjectHeading
-        {\textbf{aimbot} $|$ \emph{Python, OpenCV}}{August 2020 -}
+        {\textbf{aimbot} $|$ \emph{Python, OpenCV}}{August 2020 - Present}
             \resumeItemListStart
                 \resumeItem{Designed and engineered a camera rig that is capable of free look, utilizing 2 servos and a camera.}
-                \resumeItem{Added the ability to keep a moving object within frame, using OpenCV's built in object tracking, and comparing frames.}
+                \resumeItem{Working with the OpenCV library to provide object tracking.}
         \resumeItemListEnd
         \resumeProjectHeading
-        {\textbf{botcopium} $|$ \emph{Node.js, Discord.js}}{May 2021 -}
+        {\textbf{bot\_copium} $|$ \emph{Node.js, Discord.js}}{May 2021 - Present}
             \resumeItemListStart
-                \resumeItem{Created a bot that responds to user requests.}
-                \resumeItem{}
+                \resumeItem{Created a bot that responds to user requests on Discord.}
+                \resumeItem{Experimented with the Node.js framework and RESTful APIs to add to user experience.}
     \resumeSubHeadingListEnd
 
 %
 %-----------EXPERIENCE-----------
 \section{Work Experience}
-  \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Administrative/IT}{May 2019 -- Present}
+      {Administrative/Front Desk/IT}{May 2019 -- Present}
       {PCP Primary Care North}{Peabody, MA}
       \resumeItemListStart
         \resumeItem{Delivered exemplary customer service to patients.}
@@ -209,18 +198,8 @@ covered a variety of topics, including arrays in C, pointers, bash, file I/O, sy
         \resumeItem{Maintained technological solutions across the practice, including starting up the practice under Partners Health}
         \resumeItem{Relayed communication between patients and physician}
       \resumeItemListEnd
-      
-% -----------Multiple Positions Heading-----------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%-------------------------------------------
 
-  \resumeSubHeadingListEnd
+
 
 
 
@@ -239,11 +218,11 @@ covered a variety of topics, including arrays in C, pointers, bash, file I/O, sy
 %-------------------------------------------
 
 
-%
+
 %\section{Job Link}
 %\begin{itemize}[leftmargin=0.1in, label={}]
 %    \item{\href{https://www.linkedin.com/jobs/view/software-engineer-co-op-at-cohere-health-2383483060/?utm_campaign=google_jobs_apply&utm_source=google_jobs_apply&utm_medium=organic}{\underline{Link to Cohere Software Engineer Co-op Job Ad}}}
-%\end{itemize}
+%\end{itemize}\
 \end{document}
 
 
